welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:10: error: Boolean does not take parameters
    }else(getDirection()==Direction.WEST){
                                         ^SnakeBuggle:16: error: Unit does not take parameters
  pasDeSerpent()
              ^SnakeBuggle:17: error: Unit does not take parameters
  pasDeSerpent()
              ^